syntax = "proto3";

// Package implements gRPC Model Driven Telemetry service
package mdt_dialout;

option go_package = "github.com/open-telemetry/opentelemetry-collector-contrib/receiver/yanggrpcreceiver/internal/proto/generated";

// gRPCMdtDialout defines service used for client-side streaming pushing MdtDialoutArgs.
service gRPCMdtDialout {
    rpc MdtDialout(stream MdtDialoutArgs) returns(stream MdtDialoutArgs) {};
}

// MdtDialoutArgs is the content pushed to the server
message MdtDialoutArgs {
    int64 ReqId = 1;
    // data carries the payload content.
    bytes data = 2;
    string errors = 3;
}